Issue: #FT-1277 SubTicket: # Component: Changes: 1. remove img/grid/summary.png, OverFlowMenu.html 2. remove summarybarMobile,iconbutton.grid style

--- a/TripfinderWeb/TripfinderWeb/Global/Css/Icons.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/Icons.less
@@ -31,10 +31,6 @@
 	background-image: url(../img/icons/schedule.png);
 }
 
-.iconbutton.grid {
-	background-image: url(../img/icons/grid.png);
-}
-
 .iconbutton.globe {
 	background-image: url(../img/icons/globe.png);
 }
