--- a/TripfinderWeb/TripfinderWeb/Global/Css/grid.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/grid.less
@@ -61,7 +61,7 @@
 		opacity: 0.8;
 		background-color: white;
 		border-style: none;
-		background-size: 16px 16px;
+		background-size: 18px 18px;
 
 		&:disabled {
 			opacity: 0.4;
@@ -2885,14 +2885,6 @@ form.k-filter-menu {
 	float: left;
 	text-align: left;
 	padding-left: 2px;
-}
-
-.tf-contextmenu .menu-item .menu-icon.iconbutton.summarybarMobile {
-	background-image: url('../../global/img/grid/summary.png');
-
-	&.open {
-		background-image: url('../../global/img/grid/SummaryBarOpen.png');
-	}
 }
 
 .tf-contextmenu .menu-item .menu-icon.iconbutton.viewReport,
